[gd_scene load_steps=10 format=3 uid="uid://bh81fxcqoi63x"]

[ext_resource type="Script" path="res://scripts/SceneManager/scene.gd" id="1_urrrw"]
[ext_resource type="Texture2D" uid="uid://dtrctt0ob146j" path="res://assets/UI_buttons/play.png" id="2_2rddp"]
[ext_resource type="Script" path="res://scripts/SceneManager/ChangeSceneButton.gd" id="2_gry6h"]
[ext_resource type="Texture2D" uid="uid://kian6h8hl6q6" path="res://assets/trucks/angel_food.png" id="4_dvy60"]
[ext_resource type="Script" path="res://scripts/TeleTruck.gd" id="5_di74o"]

[sub_resource type="Animation" id="Animation_f3i7q"]
resource_name = "FadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../floaty truck:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lpue7"]
resource_name = "FadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../floaty truck:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h8hr0"]
_data = {
"FadeInTruck": SubResource("Animation_f3i7q"),
"FadeOutTruck": SubResource("Animation_lpue7")
}

[sub_resource type="LabelSettings" id="LabelSettings_8u650"]
font_size = 33
outline_size = 7
outline_color = Color(0, 0, 0, 1)
shadow_size = 16
shadow_color = Color(0.0784314, 0.0784314, 0.0784314, 0.443137)
shadow_offset = Vector2(6, 6)

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_urrrw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.054902, 0.145098, 1)

[node name="floaty truck" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(300, 300)
layout_mode = 0
offset_right = 300.0
offset_bottom = 300.0
texture = ExtResource("4_dvy60")
expand_mode = 1
stretch_mode = 5
script = ExtResource("5_di74o")
metadata/_edit_use_anchors_ = true

[node name="TruckFader" type="AnimationPlayer" parent="floaty truck"]
root_node = NodePath("../../ColorRect")
libraries = {
"": SubResource("AnimationLibrary_h8hr0")
}

[node name="Timer" type="Timer" parent="floaty truck"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Credits Label" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.427951
anchor_top = 0.226852
anchor_right = 0.592882
anchor_bottom = 0.314815
text = "Credits"
label_settings = SubResource("LabelSettings_8u650")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Cred_Main Menu" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0303819
anchor_top = 0.862654
anchor_right = 0.207465
anchor_bottom = 0.949074
texture_normal = ExtResource("2_2rddp")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("2_gry6h")
dest = "MainMenu"
metadata/_edit_use_anchors_ = true

[connection signal="animation_finished" from="floaty truck/TruckFader" to="floaty truck" method="_on_truck_fader_animation_finished"]
[connection signal="timeout" from="floaty truck/Timer" to="floaty truck" method="_on_timer_timeout"]
[connection signal="get_dest" from="Cred_Main Menu" to="." method="_on_change_scene_button_get_dest"]
[connection signal="pressed" from="Cred_Main Menu" to="Cred_Main Menu" method="_on_pressed"]
